--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 5000
 MONGODB_URL = mongodb+srv://raghavpatel1963_db_user:LIvyx8oHulzRFZpK@cluster0.lewor8t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = raghav
+JWT_SECRET = raghav 
+SUPERADMIN_EMAIL = raghavpatel1968@gmail.com
+SUPERADMIN_PASSWORD = 19681234
